# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/user": {
             "get": {
-                "description": "get user list",
+                "description": "用户列表",
                 "consumes": [
                     "application/json"
                 ],
@@ -16,20 +16,34 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "user list",
+                "summary": "用户列表",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "用户ID",
+                        "name": "id",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "返回用户信息",
+                        "description": "响应结果",
                         "schema": {
-                            "$ref": "#/definitions/handler.UserCreateRes"
+                            "$ref": "#/definitions/httpx.Resp"
                         }
                     }
                 }
             },
             "post": {
                 "description": "新增用户",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "分组名称"
                 ],
                 "summary": "新增用户",
                 "parameters": [
@@ -45,9 +59,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "返回用户信息",
+                        "description": "响应结果",
                         "schema": {
-                            "$ref": "#/definitions/handler.UserCreateRes"
+                            "$ref": "#/definitions/httpx.Resp"
                         }
                     }
                 }
@@ -83,8 +97,17 @@
                 }
             }
         },
-        "handler.UserCreateRes": {
-            "type": "object"
+        "httpx.Resp": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {},
+                "message": {
+                    "type": "string"
+                }
+            }
         }
     }
 }
